<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project2013</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_message">Choose an item ;)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_content">NewContentActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_agenda_content">AgendaContentActivity</string>
    <string name="name_shown">effy</string>
    <string name="tab1">Contacts</string>
    <string name="tab2">Agenda</string>
    <string name="tab3">News</string>
    <string name="AddTitle">add</string>
    <string name="RemoveTitle">remove</string>
    <string name="UpdateTitle">update</string>
    <string name="RefreshTitle">refresh</string>
    <string name="SearchTitle">search</string>
    <string name="accept_title">accept</string>
    <string name="title_activity_add_contact">Add Contact</string>
    <string name="title_activity_modify_contact">Update Contact</string>
    <string name="title_activity_new_task">Add Task</string>
    <string name="title_activity_update_task">Update Task</string>
    <string name="title_activity_add_new">Add New</string>
    <string name="title_activity_update_new">Update New</string>
    <string name="contact_mail">Mail</string>
    <string name="contact_name">Name</string>
    <string name="contact_surname">Surname</string>
    <string name="contact_office">Office</string>
    <string name="contact_password">Password</string>
    <string name="contact_phone">Phone</string>
    <string name="contact_position">Position</string>
    <string name="contact_privileges">Privileges</string>
    <string name="task_name">Name</string>
    <string name="task_description">Description</string>
    <string name="new_title">Title</string>
    <string name="new_description">Description</string>
    <string name="new_content">Content</string>
    
</resources>