<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_add"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/AddTitle"/>
    
    <item
        android:id="@+id/remove"
        android:icon="@drawable/ic_remove"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/RemoveTitle"/>
    
    <item
        android:id="@+id/update"
        android:icon="@drawable/ic_update"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/UpdateTitle"/>
    
    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/RefreshTitle"/>

</menu>
